--- a/build.gradle
+++ b/build.gradle
@@ -107,6 +107,7 @@ repositories {
         name 'CleanroomMC Maven'
         url 'https://maven.cleanroommc.com'
     }
+    maven { url = 'https://maven.galacticraft.net/repository/legacy/' }
 }
 
 dependencies {
@@ -144,6 +145,7 @@ dependencies {
         testImplementation 'org.junit.jupiter:junit-jupiter:5.7.1'
         testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     }
+    implementation 'dev.galacticraft:galacticraft-legacy:4.0.6'
 }
 
 apply from: 'gradle/scripts/dependencies.gradle'
