--- a/gradle.properties
+++ b/gradle.properties
@@ -16,16 +16,16 @@ show_testing_output = false
 # Mod Information
 # HIGHLY RECOMMEND complying with SemVer for mod_version: https://semver.org/
 mod_version = 1.0.0
-root_package = com.example
-mod_id = modid
-mod_name = Mod Name
+root_package = com.FuBangkun.tothestarsremake
+mod_id = tothestarsremake
+mod_name = ToTheStarsRemake
 
 # Mod Metadata (Optional)
-mod_description =
+mod_description = required-after:galacticraftcore;required-after:galacticraftplanets
 mod_url =
 mod_update_json =
 # Delimit authors with commas
-mod_authors =
+mod_authors = FuBangkun
 mod_credits =
 mod_logo_path =
 
@@ -36,7 +36,7 @@ use_dependency_at_files = true
 
 # Run Configurations
 # If multiple arguments/tweak classes are stated, use spaces as the delimiter
-minecraft_username = Developer
+minecraft_username = FuBangkun
 extra_jvm_args =
 extra_tweak_classes =
 
@@ -90,14 +90,14 @@ tag_class_name = ${root_package}.${mod_id}.Tags
 # AT files should be in the root of src/main/resources with the filename formatted as: `mod_id_at.cfg`
 # Use the property `access_transformer_locations` to state custom AT files if you aren't using the default `mod_id_at.cfg` location
 # If multiple locations are stated, use spaces as the delimiter
-use_access_transformer = false
-access_transformer_locations = ${mod_id}_at.cfg
+use_access_transformer = true
+access_transformer_locations = debug_at.cfg
 
 # Mixins
 # Powerful tool to do runtime description changes of classes
 # Wiki: https://github.com/SpongePowered/Mixin/wiki + https://github.com/CleanroomMC/MixinBooter/ + https://cleanroommc.com/wiki/forge-mod-development/mixin/preface
 # Only use mixins once you understand the underlying structure
-use_mixins = false
+use_mixins = true
 mixin_booter_version = 9.1
 # A configuration defines a mixin set, and you may have as many mixin sets as you require for your application.
 # Each config can only have one and only one package root.
@@ -115,9 +115,9 @@ mixin_refmap = mixins.${mod_id}.refmap.json
 # Only make a coremod if you are absolutely sure of what you are doing
 # Change the property `coremod_includes_mod` to false if your coremod doesn't have a @Mod annotation
 # You MUST state a class name for `coremod_plugin_class_name` if you are making a coremod, the class should implement `IFMLLoadingPlugin`
-is_coremod = false
+is_coremod = true
 coremod_includes_mod = true
-coremod_plugin_class_name =
+coremod_plugin_class_name = com.FuBangkun.tothestarsremake.asm.TTSCoremod
 
 # AssetMover
 # Convenient way to allow downloading of assets from official vanilla Minecraft servers, CurseForge, or any direct links
