--- a/gradle.properties
+++ b/gradle.properties
@@ -21,7 +21,7 @@ mod_id = tothestarsremake
 mod_name = ToTheStarsRemake
 
 # Mod Metadata (Optional)
-mod_description = required-after:galacticraftcore;required-after:galacticraftplanets;required-after:mixinbooter@[8.0,)
+mod_description = Allows you to travel to stars in Galacticraft 4.
 mod_url =
 mod_update_json =
 # Delimit authors with commas
@@ -36,7 +36,7 @@ use_dependency_at_files = true
 
 # Run Configurations
 # If multiple arguments/tweak classes are stated, use spaces as the delimiter
-minecraft_username = FuBangkun
+minecraft_username = Developer
 extra_jvm_args =
 extra_tweak_classes =
 
