--- a/gradle.properties
+++ b/gradle.properties
@@ -15,8 +15,8 @@ show_testing_output = false
 
 # Mod Information
 # HIGHLY RECOMMEND complying with SemVer for mod_version: https://semver.org/
-mod_version = 1.0.1
-root_package = com.FuBangkun.tothestarsremake
+mod_version = 1.0.3
+root_package = com.FuBangkun
 mod_id = tothestarsremake
 mod_name = ToTheStarsRemake
 
@@ -91,14 +91,14 @@ tag_class_name = ${root_package}.${mod_id}.Tags
 # Use the property `access_transformer_locations` to state custom AT files if you aren't using the default `mod_id_at.cfg` location
 # If multiple locations are stated, use spaces as the delimiter
 use_access_transformer = true
-access_transformer_locations = debug_at.cfg
+access_transformer_locations = ${mod_id}_at.cfg
 
 # Mixins
 # Powerful tool to do runtime description changes of classes
 # Wiki: https://github.com/SpongePowered/Mixin/wiki + https://github.com/CleanroomMC/MixinBooter/ + https://cleanroommc.com/wiki/forge-mod-development/mixin/preface
 # Only use mixins once you understand the underlying structure
 use_mixins = true
-mixin_booter_version = 9.1
+mixin_booter_version = 10.6
 # A configuration defines a mixin set, and you may have as many mixin sets as you require for your application.
 # Each config can only have one and only one package root.
 # Generate missing configs, obtain from mixin_configs and generate file base on name convention: "mixins.config_name.json"
@@ -117,7 +117,7 @@ mixin_refmap = mixins.${mod_id}.refmap.json
 # You MUST state a class name for `coremod_plugin_class_name` if you are making a coremod, the class should implement `IFMLLoadingPlugin`
 is_coremod = true
 coremod_includes_mod = true
-coremod_plugin_class_name = com.FuBangkun.tothestarsremake.asm.TTSCoremod
+coremod_plugin_class_name = com.FuBangkun.tothestarsremake.mixin.TTSREarlyInit
 
 # AssetMover
 # Convenient way to allow downloading of assets from official vanilla Minecraft servers, CurseForge, or any direct links
